--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 14.x
+          node-version: 14.20.0
 
       - name: Install GitBook
         run: npm install -g gitbook-cli
