--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -23,7 +23,10 @@ jobs:
 
       - name: Build Books
         run: ./scripts/build.sh
-
+        env:
+          BEFORE_SHA: ${{ github.event.before }}
+          CURRENT_SHA: ${{ github.sha }}
+          
       - name: Setup SSH Key
         uses: webfactory/ssh-agent@v0.7.0
         with:
